--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/beardgrowers/beardgrowers.controller.js"></script>
           <script src="app/becomeagrower/becomeagrower.controller.js"></script>
+          <script src="app/grower/grower.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/ourstory/ourstory.controller.js"></script>
           <script src="app/ourstory/support/support.controller.js"></script>
