--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,6 @@
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/json3/lib/json3.js"></script>
       <script src="bower_components/angular-resource/angular-resource.js"></script>
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -71,6 +70,25 @@
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
+        <script src="app/account/account.js"></script>
+        <script src="app/account/login/login.controller.js"></script>
+        <script src="app/account/settings/settings.controller.js"></script>
+        <script src="app/account/signup/signup.controller.js"></script>
+        <script src="app/admin/admin.controller.js"></script>
+        <script src="app/admin/admin.js"></script>
+        <script src="app/beardgrowers/beardgrowers.controller.js"></script>
+        <script src="app/becomeagrower/becomeagrower.controller.js"></script>
+        <script src="app/grower/grower.controller.js"></script>
+        <script src="app/main/main.controller.js"></script>
+        <script src="app/ourstory/ourstory.controller.js"></script>
+        <script src="app/ourstory/support/support.controller.js"></script>
+        <script src="app/support/support.controller.js"></script>
+        <script src="app/thankyou/thankyou.controller.js"></script>
+        <script src="components/auth/auth.service.js"></script>
+        <script src="components/auth/user.service.js"></script>
+        <script src="components/directives/ng-match.js"></script>
+        <script src="components/mongoose-error/mongoose-error.directive.js"></script>
+        <script src="components/navbar/navbar.controller.js"></script>
           <!-- injector:js -->
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
