--- a/client/app/becomeagrower/becomeagrower.html
+++ b/client/app/becomeagrower/becomeagrower.html
@@ -27,7 +27,16 @@
     </div>
   </div>
   <div class="row"> 
-    <div class="col-sm-6">
+    <div ng-show="isLoggedIn" class="col-xs-12 text-center">
+      <p>
+        <br />
+        <i>You are already logged in and I'm pretty sure you can't grow two beards..
+        <br /><br />
+          Maybe you just wanted to review your oath!  
+        </i>
+      </p>
+    </div>
+    <div ng-hide="isLoggedIn" class="col-sm-6">
 
       <form class="form" role="form" name="form" ng-submit="register(form)" novalidate>
         
