--- a/client/app/grower/grower.html
+++ b/client/app/grower/grower.html
@@ -14,6 +14,25 @@
         <div class="progress-bar progress-bar-success" style="{{ 'width:' + progress + '%;' }}">{{ progress }}%</i></div>
         <span ng-if="left">{{ left }}%</span>
       </div>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_donations">
+        <input type="hidden" name="business" value="KWQM85LPRDEA8">
+        <input type="hidden" name="lc" value="US">
+        <input type="hidden" name="item_name" value="Supporting a Grower">
+        <input type="hidden" name="button_subtype" value="services">
+        <input type="hidden" name="no_note" value="0">
+        <input type="hidden" name="cn" value="Add special instructions to the seller:">
+        <input type="hidden" name="no_shipping" value="1">
+        <input type="hidden" name="rm" value="1">
+        <input type="hidden" name="return" value="http://www.bigbeardsforababy.com/thankyou">
+        <input type="hidden" name="cancel_return" value="http://www.bigbeardsforababy.com/">
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynow_LG.gif:NonHosted">
+        <table>
+          <tr><td><input type="hidden" name="on0" value="Grower:"></td></tr><tr><td><input type="hidden" name="os0" maxlength="200" value="{{ grower.name }}"></td></tr>
+        </table>
+        <input type="submit" value="{{ 'Support ' + grower.name +'\'s Beard!'}}" class="btn btn-success btn-lg" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      </form>
     </div>
   </div>
   <div class="row">
