--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -30,10 +30,10 @@
         </div>
 
         <div>
-          <button class="btn btn-primary btn-lg btn-login" type="submit">
+          <button class="btn btn-primary btn-login" type="submit">
             Login
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/becomeagrower">
+          <a class="btn btn-default btn-register" href="/becomeagrower">
             Register
           </a>
         </div>
