Fixed a couple of typos in becomeagrower.

--- a/client/app/becomeagrower/becomeagrower.html
+++ b/client/app/becomeagrower/becomeagrower.html
@@ -4,7 +4,7 @@
     <div class="col-sm-12">
       <h4>Contest Instructions</h4>
       <p>
-        <strong>Grow a Beard</strong> -  For those of who already have a beard, keep it growing. And the others who are clean shaven, start the growing. If you are worried about keeping it professional for work, trimming will be allowed. If you don’t care about any of that, then by all means let the neck beard grow.  The contest will be from November 1st – May 1st.
+        <strong>Grow a Beard</strong> -  For those of you who already have a beard, keep it growing. And the others who are clean shaven, start the growing. If you are worried about keeping it professional for work, trimming will be allowed. If you don’t care about any of that, then by all means let the neck beard grow.  The contest will be from November 1st – May 1st.
       </p>
 
       <p>
@@ -20,9 +20,11 @@
       </p>
 
       <p>
-        <strong>Gather Funds</strong> – Each contestant is responsibly for collecting their monthly pledges. Pledges need to be collected no later than May 1st. Sponsors can pay by cash, check, or pay on this site via “beard support” (scott you can decide what it should say, I don’t care) You can pay monthly here, or if you have friends and family who just want to do a one time donation.
+        <strong>Gather Funds</strong> – Each contestant is responsibly for collecting their monthly pledges. Pledges need to be collected no later than May 1st. Sponsors can pay by cash, check, or pay on this site. Through paypal you can pay both monthly or with a one time donation.
+      </p>
 
-6.     Rock it – we just want you guys to enjoy yourself. There will be prizes and incentives along the way to ensure your fun.
+      <p>
+      <strong>Rock it</strong> – we just want you guys to enjoy yourself. There will be prizes and incentives along the way to ensure your fun.
       </p>
     </div>
   </div>
