Added Beard Comb to Support.

--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -11,6 +11,30 @@
     <input type="hidden" name="hosted_button_id" value="D2ES8S97EP3FS">
     <input type="submit" value="Directly Support Big Beards for a Baby" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
   </form>
+
+  <h3>Store</h3>
+  <h4>The Beard Comb</h4>
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <img class="img-responsive img-rounded" alt="Beard Comb" src="/assets/images/beard-comb.jpg"></img>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <strong>Description:</strong>
+      <p>
+        An epic beard requires an epic beard comb.<br /><br />
+        <i>Dimensions: 5"x1.75"</i>
+      </p>
+    </div>
+    <div class="col-xs-12 col-sm-3">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="EAPZ8GNS6P32E">
+        <input type="submit" value="Buy Now" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      </form>
+      $12.00 (w/ shipping)<br />
+    </div>
+  </div>
+  
   
   <h3>Spread The Word</h3>
   <p>Looking to tell your friends about Big Beards for a Baby? Here are some resources to help get you started!</p>
