Added Both Countdown and Time lapsed for growing.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -36,8 +36,10 @@
         </div>
         <div class="col-sm-3">
             <div ng-show="countdown" class="slide-in">
-                <h4>Commence Growing In:</h4>
-                <span class="countdown-timer"><timer end-time="1414814400000">{{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer></span>
+                <h4>Growth Timer:</h4>
+                <span class="countdown-timer"><timer start-time="1414814400000">{{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer></span>
+                <h4>Conclude Growing In:</h4>
+                <span class="countdown-timer"><timer end-time="1430452799000">{{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer></span>
             </div>
             
             <!-- Instagram Feed -->
