--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -34,6 +34,37 @@
       $12.00 (w/ shipping)<br />
     </div>
   </div>
+  <h4>The Shirt</h4>
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <img class="img-responsive img-rounded" alt="Beard Comb" src="/assets/images/shirt.jpg"></img>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <strong>Description:</strong>
+      <p>
+        Support our growers, in style, wherever you go!<br />Be brazen!<br /><br />
+        <i>Sizes: Small, Medium, Large, X-Large, XX-Large</i>
+      </p>
+    </div>
+    <div class="col-xs-12 col-sm-3">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="4E7PYWPV6D5VW">
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="submit" value="Buy Now" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <table>
+          <tr><td><input type="hidden" name="on0" value="BBFAB Shirt"><label for="size">Size:</label></td></tr><tr><td><select id="size" name="os0" class="form-control">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+            <option value="X-Large">X-Large</option>
+            <option value="XX-Large">XX-Large</option>
+          </select> </td></tr>
+        </table>
+      </form>
+      $25.00 (w/ shipping)<br />
+    </div>
+  </div>
   
   
   <h3>Spread The Word</h3>
