--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,14 @@
     <title>Big Beards for a Baby</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:title" content="Big Beards for a Baby">
+    <meta property="og:image" content="http://bigbeardsforababy.com/assets/images/logo-md.png">
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="bower_components/animate.css/animate.css">
+    <link rel="stylesheet" href="bower_components/angular-social/angular-social.css">
 
       <!-- injector:css -->
       <link rel="stylesheet" href="app/main.css">
@@ -55,6 +58,7 @@
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
+      <script src="bower_components/json3/lib/json3.js"></script>
       <script src="bower_components/angular-resource/angular-resource.js"></script>
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -64,6 +68,7 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
       <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+      <script src="bower_components/angular-social/angular-social.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
