--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,56 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-            <h1>Big Beards for a Baby</h1>
+            <!-- Post 2 --> 
+            <h2>30 Reasons Why You Should Be a Beard Grower!</h2>
+            <p><i>Posted November 7th 2014</i></p>
+            <img class="img-responsive img-rounded" style="margin:auto;" alt="Tim Barker with a Beard holding a sign..." src="/assets/images/tim-barker-sign.jpg"></img>
+            <p> 
+              Hey Friends!<br />
+              Thank you so much for checking us out and getting excited about the
+              beard-a-thon. We are blown away by the number of guys who have 
+              signed up to grow their beards on our behalf and who have already 
+              received donations! In light of the many people we know right now 
+              turning 30, we present to you:<br /><br />
+              
+              30 reasons why you should consider growing a beard for our beard-a-thon:<br /><br />
+              <ol>
+                <li>Beards are awesome! So are babies!
+                </li><li>Its manly
+                </li><li>A child needs a home
+                </li><li>its cheaper than shaving
+                </li><li>Its easier than shaving
+                </li><li>Its for a good cause
+                </li><li>You can hide things in it
+                </li><li>It’s a fun way to raise adoption awareness!
+                </li><li>Makes you appear smarter
+                </li><li>In emergencies it can keep you and your friends warm
+                </li><li>Because one day our child will know you played a huge role in bringing him/her home, and how awesome would that be?
+                </li><li>Every beautiful woman will want to touch and stroke it 
+                </li><li>Built in cushion to rest your head on
+                </li><li>Its easy!
+                </li><li>It’s a great conversation starter
+                </li><li>153,000,000 orphans. Minus 1. 
+                </li><li>What a great way to live out God’s command to care for the orphan!
+                </li><li>No more cuts or razor burn 
+                </li><li>Protects your face from sunburn
+                </li><li>You can practice your braiding skills with it
+                </li><li>we will love you forever
+                </li><li>to attract the ladies…
+                </li><li>…or to look creepy…
+                </li><li>a great  tool for your fidgety hands
+                </li><li>there are incentives every month
+                </li><li>you get an FREE pin 
+                </li><li>because thanks to social media,  this will be on your record for the rest of your life!
+                </li><li>You will change not only my life but many lives.
+                </li><li>Growing a beard grants you the opportunity to say, “I wasn’t sure about this beard at first, but it is growing on me.” Then you can smile while your friends roll their eyes at you!
+                </li><li>Lastly, Jesus had a Beard.
+              </ol>
+            </p>
+            <hr />
+            <!-- Post 1 -->
+            <h2>Big Beards for a Baby</h2>
+            <p><i>Posted October 15th 2014</i>
             <p>Friends and Family,</p>
             
             <p>
