--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,31 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
+            <!-- Post 5 --> 
+            <h2>Beard Grower Spotlight!</h2>
+            <p><i>Posted December 9th 2014</i></p>
+            <img class="img-responsive img-rounded" style="margin:auto;margin-top:15px;margin-bottom:15px;" src="/assets/images/forrest.jpg"></img>
+
+            <p>
+              I met Forrest this past summer through a close friend. From the beginning his beard has stood out to me.  And honestly, we don’t really know Forrest well, but feel incredibly thankful for his willingness to step up and a Beard Grower for us! Here is what he had to say: 
+            </p>
+
+            <p>
+              My name is Forrest J. Page and I come from a family of educators and manliness.  I am the oldest of two children from Mason, Michigan where the corn grows tall and the beards long.  Currently, I am teaching at Grand Rapids Ellington Academy of Arts and Technology.  My life consists of a lot of work, listening to music, raising my children, spending time with my family, and being a brawny man.
+            </p>
+
+            <p>
+              I signed up to grow this beard for a few reasons.  One, if you are good at something never do it for free! Two, I support the Barkers in their quest to adopt.  Some of my best friends were adopted out of Korea.  
+            </p>
+
+            <p>Beardy Things:</p>
+            <ul>
+            <li>I built a log cabin by hand in high school.</li>
+            <li>I am single father </li>
+            <li>My beard is red, eyebrows are brown, and hair is blonde</li>
+            <li>My beard makes me play my guitar better.</li>
+            </ul>
+
             <!-- Post 4 --> 
             <h2>Beard Grower Spotlight!</h2>
             <p><i>Posted December 3rd 2014</i></p>
